Rename service 'go-service-with-metrics' to 'go-metric-producer'
Signed-off-by: Yegor Shashko <yegor.shashko@gmail.com>

--- a/metrics-tools/docker-compose.yml
+++ b/metrics-tools/docker-compose.yml
@@ -10,9 +10,9 @@ services:
     ports:
       - 9090:9090
     depends_on:
-      - go-service-with-metrics
+      - go-metric-producer
 
-  go-service-with-metrics:
+  go-metric-producer:
     build: .
     ports:
     - 8080:2112
