--- a/metrics-tools/prometheus/prometheus.yml
+++ b/metrics-tools/prometheus/prometheus.yml
@@ -15,4 +15,4 @@ scrape_configs:
     scrape_interval: 10s
     static_configs:
       - targets:
-        - go-service-with-metrics:2112
+        - go-metric-producer:2112
